# cut_in_xiaoai

./: .gitignore  .pdm-python  README.md  config.py  main.py  pyproject.toml  refreash.py  requirements.txt
apis/: bafa.py
src/: __main__.py  client.py  config.py  modules.py  server.py  utils.py
src/apis/: bafa.py  xiaoai.py
src/utils/: keyboard.py  monitor_switch.py  player.py
