[project]
name = "cut_in_xiaoai"
version = "0.2.1"
description = "Default template for PDM package"
authors = [
    {name = "pu-007", email = "pu.007@qq.com"},
]
dependencies = [
    "paho-mqtt>=2.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
